# tranche

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
conda-env/: dev.txt
docs/: Makefile  conf.py  getting-started.md  index.md  releasing-pypi.md  why-not.md
docs/api/: index.md  layeredconfig.md  section.md  tranche.md
layeredconfig/: __init__.py  layeredconfig.py  version.py
tests/: test_layeredconfig_basic.py  test_layeredconfig_comments_and_explain.py  test_layeredconfig_env_and_validate.py  test_layeredconfig_numpy_math.py  test_section.py  test_tranche_basic.py  test_tranche_comments_and_explain.py  test_tranche_env_and_validate.py  test_tranche_numpy_math.py
tranche/: __init__.py  section.py  tranche.py  version.py
