[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tranche"
dynamic = ["version"]
description = "ConfigParser with layered precedence, provenance, comment-preserving writes, and safe expressions."
readme = "README.md"
authors = [
  { name = "Xylar Asay-Davis" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["config", "configparser", "layered", "provenance", "numpy", "safe-eval"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/xylar/tranche"
Documentation = "https://xylar.github.io/tranche/"
Issues = "https://github.com/xylar/tranche/issues"

[project.optional-dependencies]
numpy = ["numpy>=1.22"]
dev = [
  "build>=1.3",
  "pre-commit>=3.5",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "twine>=6.0",
  "wheel>=0.45",
]
docs = [
  "furo>=2023.9.10",
  "myst-parser>=2.0",
  "sphinx>=7.0",
  "tomli>=2.0; python_version<'3.11'",
]

[tool.setuptools]
packages = ["tranche"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "tranche.version.__version__"}

[tool.setuptools.package-data]
tranche = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["docs"]

[tool.ruff.lint]
select = [
  "E", "F", "W",  # pycodestyle/pyflakes
  "I",              # isort
  "UP",             # pyupgrade
  "B",              # flake8-bugbear
]
ignore = [
]

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
exclude = ["docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
